welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:27: error: Unit does not take parameters
run() {grosPot(); gauche(); recule(); droite(); while (!estDosMur) {recule()}; droite(); droite(); avance(4); gauche(); grosPot()} 
      ^